--- a/docs/math/sketches/1/2.qmd
+++ b/docs/math/sketches/1/2.qmd
@@ -1,5 +1,12 @@
 ---
 title: What is order?
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_1_2.yml
 ---
 
 ::: {.callout-tip icon=false collapse=false}
