--- a/docs/math/sketches/1/3.qmd
+++ b/docs/math/sketches/1/3.qmd
@@ -1,5 +1,12 @@
 ---
 title: Preorders
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_1_3.yml
 ---
 
 
