--- a/docs/math/sketches/1/index.qmd
+++ b/docs/math/sketches/1/index.qmd
@@ -1,5 +1,12 @@
 ---
 title: Generative effects
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_1_index.yml
 ---
 
 # [More than the sum of their parts](1.qmd)
