--- a/docs/math/sketches/2/2.qmd
+++ b/docs/math/sketches/2/2.qmd
@@ -1,5 +1,12 @@
 ---
 title: Symmetric monoidal preorders
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_2_2.yml
 ---
 
 ## Definition and first examples
