--- a/docs/math/sketches/2/4.qmd
+++ b/docs/math/sketches/2/4.qmd
@@ -1,5 +1,12 @@
 ---
 title: Constructions on V-categories
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_2_4.yml
 ---
 
 ## Changing the base of enrichment
