--- a/docs/math/sketches/3/1.qmd
+++ b/docs/math/sketches/3/1.qmd
@@ -1,5 +1,12 @@
 ---
 title: What is a database?
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_3_1.yml
 ---
 
 - A database is a system of interlocking tables.
