--- a/docs/math/sketches/4/index.qmd
+++ b/docs/math/sketches/4/index.qmd
@@ -1,5 +1,12 @@
 ---
 title: Co-design
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - /../../../../backlinks/docs_math_sketches_4_index.yml
 ---
 
 # [Can we build it?](1.qmd)
