--- a/docs/math/sketches/5/1.qmd
+++ b/docs/math/sketches/5/1.qmd
@@ -1,5 +1,12 @@
 ---
 title: Comparing systems as interacting signal processors
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_5_1.yml
 ---
 
 
