--- a/docs/math/sketches/6/1.qmd
+++ b/docs/math/sketches/6/1.qmd
@@ -1,5 +1,12 @@
 ---
 title: The ubiquity of network languages
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_6_1.yml
 ---
 
 # TO DO
