--- a/docs/math/sketches/7/1.qmd
+++ b/docs/math/sketches/7/1.qmd
@@ -1,5 +1,12 @@
 ---
 title: How can we prove our machine is safe?
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_7_1.yml
 ---
 
 # TO DO
