--- a/docs/math/sketches/7/3.qmd
+++ b/docs/math/sketches/7/3.qmd
@@ -1,5 +1,12 @@
 ---
 title: Sheaves
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_7_3.yml
 ---
 
 ## Presheaves
