--- a/docs/phil/distinctions/broken/analytic_synthetic.qmd
+++ b/docs/phil/distinctions/broken/analytic_synthetic.qmd
@@ -1,5 +1,12 @@
 ---
 title: The analytic / synthetic distinction
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_phil_distinctions_broken_analytic_synthetic.yml
 ---
 
 
