--- a/docs/phil/people/nietzsche/index.qmd
+++ b/docs/phil/people/nietzsche/index.qmd
@@ -1,5 +1,12 @@
 ---
 title: Neitzsche
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_phil_people_nietzsche_index.yml
 ---
 
 A German philosopher, 1844-1900.
