--- a/docs/phil/situations/auction.qmd
+++ b/docs/phil/situations/auction.qmd
@@ -1,5 +1,12 @@
 ---
 title: Auction
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_auction.yml
 ---
 
 I wander in from a different culture, into an auction house:
