--- a/docs/phil/situations/piatree.qmd
+++ b/docs/phil/situations/piatree.qmd
@@ -1,5 +1,12 @@
 ---
 title: Pia's Maple Tree
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_piatree.yml
 ---
 
 
