--- a/docs/phil/situations/platepoint.qmd
+++ b/docs/phil/situations/platepoint.qmd
@@ -1,5 +1,12 @@
 ---
 title: Pointing at a plate
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_platepoint.yml
 ---
 
 
