--- a/docs/phil/switcharoos/sensedata_concepts.qmd
+++ b/docs/phil/switcharoos/sensedata_concepts.qmd
@@ -1,6 +1,13 @@
 
 ---
 title: Sense data and concepts
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_switcharoos_sensedata_concepts.yml
 ---
 
 
