--- a/docs/math/sketches/3/index.qmd
+++ b/docs/math/sketches/3/index.qmd
@@ -1,8 +1,3 @@
----
-title: Databases
----
-
-
 # [What is a database?](1.qmd)
 {{< include 1.qmd >}}
 
@@ -23,4 +18,11 @@ title: Databases
 
 ---
 title: Databases
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_3_index.yml
 ---
