--- a/docs/math/sketches/4/5.qmd
+++ b/docs/math/sketches/4/5.qmd
@@ -1,5 +1,12 @@
 ---
 title: Profunctors form compact closed categories
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_4_5.yml
 ---
 
 ## Compact closed categories
