--- a/docs/math/sketches/6/5.qmd
+++ b/docs/math/sketches/6/5.qmd
@@ -1,5 +1,12 @@
 ---
 title: Operads and their algebras
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_math_sketches_6_5.yml
 ---
 
 ## Operads design wiring diagrams
