--- a/docs/notes.qmd
+++ b/docs/notes.qmd
@@ -3,4 +3,4 @@ title: Notes
 comments: false
 ---
 
-I currently have uploaded some notes on [math](math) and [philosophy](phil).
+I currently have uploaded some notes on [math](math/) and [philosophy](phil/).
