--- a/docs/phil/distinctions/broken/objective_subjective.qmd
+++ b/docs/phil/distinctions/broken/objective_subjective.qmd
@@ -1,5 +1,12 @@
 ---
 title: Objective vs subjective facts
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_phil_distinctions_broken_objective_subjective.yml
 ---
 
 
