--- a/docs/phil/index.qmd
+++ b/docs/phil/index.qmd
@@ -1,6 +1,13 @@
 ---
 title: Philosophy notes
 comments: false
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../ejs/custom.ejs"
+  contents:
+    - ../../backlinks/docs_phil_index.yml
 ---
 
 Various notes on philosophy.
