--- a/docs/phil/people/brandom/index.qmd
+++ b/docs/phil/people/brandom/index.qmd
@@ -1,5 +1,12 @@
 ---
 title: Brandom
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_phil_people_brandom_index.yml
 ---
 
 An American philosopher, born in 1950. [Academic website](www.pitt.edu/~rbrandom)
