--- a/docs/phil/people/kant/index.qmd
+++ b/docs/phil/people/kant/index.qmd
@@ -1,8 +1,15 @@
 ---
 title: Kant
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../../ejs/custom.ejs"
+  contents:
+    - ../../../../backlinks/docs_phil_people_kant_index.yml
 ---
 
 # On Locke
-The ``celebrated Mr. Locke" (i.e. empiricism) offered ``a mere physiology of the understanding." [^1]
+The "celebrated Mr. Locke" (i.e. empiricism) offered "a mere physiology of the understanding." [^1]
 
 [^1]: A 85-7 / B 117-9 [-@smith2011immanuel]
