--- a/docs/phil/problems/bradleys.qmd
+++ b/docs/phil/problems/bradleys.qmd
@@ -1,5 +1,12 @@
 ---
 title: Bradley's Problem
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_problems_bradleys.yml
 ---
 
 
