--- a/docs/phil/situations/childrensgame.qmd
+++ b/docs/phil/situations/childrensgame.qmd
@@ -1,5 +1,12 @@
 ---
 title: A children's game
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_childrensgame.yml
 ---
 
 
