--- a/docs/phil/situations/lostkeys.qmd
+++ b/docs/phil/situations/lostkeys.qmd
@@ -1,5 +1,12 @@
 ---
 title: Lost Keys
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_lostkeys.yml
 ---
 
 
