--- a/docs/phil/situations/pluto.qmd
+++ b/docs/phil/situations/pluto.qmd
@@ -1,5 +1,12 @@
 ---
 title: Pluto
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "/../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_pluto.yml
 ---
 
 
