--- a/docs/phil/situations/warhero.qmd
+++ b/docs/phil/situations/warhero.qmd
@@ -1,5 +1,12 @@
 ---
 title: The War Hero
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_situations_warhero.yml
 ---
 
 
