--- a/docs/phil/switcharoos/concept_judgment.qmd
+++ b/docs/phil/switcharoos/concept_judgment.qmd
@@ -1,8 +1,14 @@
 
 ---
 title: Concepts and judgment
+listing:
+  id: backlinks
+  type: table
+  filter-ui: true
+  template: "../../../ejs/custom.ejs"
+  contents:
+    - ../../../backlinks/docs_phil_switcharoos_concept_judgment.yml
 ---
-
 
 
 We normally think that the content of judgments are dictated by the content of the concepts used inside of them. This feels especially right for artificial languages:
@@ -18,4 +24,3 @@ This is also related to a switch of priority made by Sellars: we normally think 
 One argument for our initial intuition is that the logically-valid inferences are *a priori*, whereas the particular inferences are *a posteriori*.[^1] However, [Achilles and the Tortoise](/docs/phil/problems/tortoise.qmd) feels relevant for arguing against this point of view: the logically-valid inferences exist *a priori* as abstract mathematical/syntactical objects, but without any practical experience of actually making inferential moves, we don't have access to them *qua* inferences.
 
 [^1]: The words *priori* and *posteriori* literally make the order clear.
-
